--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,6 +1,12 @@
 .btn {
   font-size: 11px;
   padding: 0;
-  width: 40px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+}
+.contact {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
